--- a/ipsj.sty
+++ b/ipsj.sty
@@ -1,3 +1,13 @@
+% Portions of this file are derived from:
+% https://github.com/yk-lab/ipsj_national_convention_template/blob/master/ipsj.sty
+%
+% Original work:
+% Copyright (c) 2019, yk
+% Licensed under the BSD 2-Clause License.
+%
+% The original copyright notice, license terms,
+% and disclaimer apply to the derived portions.
+
 \geometry{noheadfoot,top=30truemm,bottom=25truemm,hmargin=20truemm}
 \setlength{\columnsep}{7mm}
 \renewcommand\footnoterule{\rule{\linewidth}{0.6pt}}
