--- a/sample.tex
+++ b/sample.tex
@@ -1,3 +1,5 @@
+%SPDX-FileCopyrightText: 2025–2026 Yoshitaka Hirata
+%SPDX-License-Identifier: BSD-3-Clause
 \documentclass[uplatex,dvipdfmx,a4paper,twocolumn,base=11pt,jbase=11pt,ja=standard]{bxjsarticle}
 
 % ===== IPSJ =====
